--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -133,9 +133,7 @@
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_Create3PointCircle.svg&amp;filetimestamp=20240101085716&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Create3PointCircle.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Create3PointCircle.html" title="Sketcher Create3PointCircle">Kruh ze 3 bod&#367;</a>: Vytvo&#345;&iacute; kruh ze t&#345;&iacute; bod&#367; le&#382;&iacute;c&iacute;ch na kru&#382;nici. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>: Jedn&aacute; se o stejn&yacute; n&aacute;stroj jako <a href="../Sketcher_CreateCircle.html" title="Sketcher CreateCircle">Kruh ze st&#345;edu</a>, ale s odli&scaron;n&yacute;m po&#269;&aacute;te&#269;n&iacute;m re&#382;imem.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateEllipseByCenter.svg&amp;filetimestamp=20240101090023&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateEllipseByCenter.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateEllipseByCenter.html" title="Sketcher CreateEllipseByCenter">Elipsa ze st&#345;edu</a>: Vytvo&#345;&iacute; elipsu od jej&iacute;ho st&#345;edu, koncov&eacute;ho bodu jedn&eacute; z jej&iacute;ch os a bodu pod&eacute;l elipsy. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>: Nebo z obou konc&#367; jedn&eacute; z jej&iacute;ch os a bodu na elipse.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateEllipseBy3Points.svg&amp;filetimestamp=20240101170343&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateEllipseBy3Points.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateEllipseBy3Points.html" title="Sketcher CreateEllipseBy3Points">Elipsa ze 3 bod&#367;</a>: Vytvo&#345;&iacute; elipsu z koncov&yacute;ch bod&#367; jedn&eacute; z jej&iacute;ch os a bodu le&#382;&iacute;c&iacute;ho na elipse. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>: Jedn&aacute; se o stejn&yacute; n&aacute;stroj jako <a href="../Sketcher_CreateEllipseByCenter.html" title="Sketcher CreateEllipseByCenter">Ellipsa podle st&#345;edu</a>, ale s odli&scaron;n&yacute;m po&#269;&aacute;te&#269;n&iacute;m re&#382;imem.</li></ul></dd></dl>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span id="Sketcher_CompCreateRectangles"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Sketcher_CreateRectangle.svg&amp;filetimestamp=20240101090846&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateRectangle.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow_blue_background.svg&amp;filetimestamp=20221006081506&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow_blue_background.svg" decoding="async" width="16" height="32" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span> Create Rectangle:</span></li></ul>
-</div>
+<ul><li><span id="Sketcher_CompCreateRectangles"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Sketcher_CreateRectangle.svg&amp;filetimestamp=20240101090846&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateRectangle.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow_blue_background.svg&amp;filetimestamp=20221006081506&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow_blue_background.svg" decoding="async" width="16" height="32" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span> Vytvo&#345;it obd&eacute;ln&iacute;k:</span></li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateRectangle.svg&amp;filetimestamp=20240101090846&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateRectangle.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateRectangle.html" title="Sketcher CreateRectangle">Rectangle</a>: Creates a rectangle. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>: The tool has four modes. Rounded corners and creating an offset copy are optional features.</li></ul></dd></dl>
 </div>
@@ -746,13 +744,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118114103
+Cached time: 20260118114140
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.480 seconds
-Real time usage: 0.706 seconds
-Preprocessor visited node count: 1524/1000000
+CPU time usage: 0.449 seconds
+Real time usage: 0.861 seconds
+Preprocessor visited node count: 1523/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
 Highest expansion depth: 7/100
@@ -762,19 +760,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   51.485      1 -total
- 22.57%   11.621      1 Template:Sketcher_Tools_navi/cs
- 13.77%    7.088      1 Template:Userdocnavi/cs
- 11.25%    5.794      2 Template:Navigation_menu_2
- 10.68%    5.500      1 Template:PropertyView
-  8.23%    4.236      2 Template:Docnav
-  6.49%    3.341      8 Template:VersionPlus
-  6.46%    3.327      1 Template:TOCright
-  5.92%    3.047     34 Template:Version
-  5.42%    2.792      5 Template:MenuCommand
+100.00%   49.827      1 -total
+ 23.50%   11.708      1 Template:Sketcher_Tools_navi/cs
+ 13.36%    6.657     34 Template:Version
+ 13.33%    6.640      1 Template:Userdocnavi/cs
+  9.02%    4.492      2 Template:Navigation_menu_2
+  8.43%    4.198      8 Template:VersionPlus
+  7.56%    3.765      1 Template:PropertyView
+  5.55%    2.766     14 Template:KEY
+  5.42%    2.702      5 Template:MenuCommand
+  4.39%    2.189      6 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118114103 and revision id 1740327. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118114139 and revision id 1740335. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
