--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -135,9 +135,7 @@
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateEllipseBy3Points.svg&amp;filetimestamp=20240101170343&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateEllipseBy3Points.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateEllipseBy3Points.html" title="Sketcher CreateEllipseBy3Points">Elipsa ze 3 bod&#367;</a>: Vytvo&#345;&iacute; elipsu z koncov&yacute;ch bod&#367; jedn&eacute; z jej&iacute;ch os a bodu le&#382;&iacute;c&iacute;ho na elipse. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>: Jedn&aacute; se o stejn&yacute; n&aacute;stroj jako <a href="../Sketcher_CreateEllipseByCenter.html" title="Sketcher CreateEllipseByCenter">Ellipsa podle st&#345;edu</a>, ale s odli&scaron;n&yacute;m po&#269;&aacute;te&#269;n&iacute;m re&#382;imem.</li></ul></dd></dl>
 <ul><li><span id="Sketcher_CompCreateRectangles"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Sketcher_CreateRectangle.svg&amp;filetimestamp=20240101090846&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateRectangle.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow_blue_background.svg&amp;filetimestamp=20221006081506&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow_blue_background.svg" decoding="async" width="16" height="32" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span> Vytvo&#345;it obd&eacute;ln&iacute;k:</span></li></ul>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateRectangle.svg&amp;filetimestamp=20240101090846&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateRectangle.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateRectangle.html" title="Sketcher CreateRectangle">Obd&eacute;ln&iacute;k</a>: Vytvo&#345;&iacute; obd&eacute;ln&iacute;k. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>: N&aacute;stroj m&aacute; &#269;ty&#345;i re&#382;imy. Zaoblen&eacute; rohy a vytvo&#345;en&iacute; odsazen&eacute; kopie jsou voliteln&eacute; funkce.</li></ul></dd></dl>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateRectangle_Center.svg&amp;filetimestamp=20240101090859&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateRectangle_Center.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateRectangle_Center.html" title="Sketcher CreateRectangle Center">Centered Rectangle</a>: Creates a centered rectangle. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>: This is the same tool as <a href="../Sketcher_CreateRectangle.html" title="Sketcher CreateRectangle">Rectangle</a> but with a different initial mode.</li></ul></dd></dl>
-</div>
+<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateRectangle_Center.svg&amp;filetimestamp=20240101090859&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateRectangle_Center.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateRectangle_Center.html" title="Sketcher CreateRectangle Center">Vycentrovan&yacute; obd&eacute;ln&iacute;k</a>: Vytvo&#345;&iacute; vycentrovan&yacute; obd&eacute;ln&iacute;k. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>: Jedn&aacute; se o stejn&yacute; n&aacute;stroj jako <a href="../Sketcher_CreateRectangle.html" title="Sketcher CreateRectangle">Obd&eacute;ln&iacute;k</a>, ale s odli&scaron;n&yacute;m po&#269;&aacute;te&#269;n&iacute;m re&#382;imem.</li></ul></dd></dl>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateOblong.svg&amp;filetimestamp=20240101090600&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateOblong.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateOblong.html" title="Sketcher CreateOblong">Rounded Rectangle</a>: Creates a rounded rectangle. Idem.</li></ul></dd></dl>
 </div>
@@ -742,13 +740,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118114344
+Cached time: 20260118114501
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.447 seconds
-Real time usage: 0.669 seconds
-Preprocessor visited node count: 1522/1000000
+CPU time usage: 0.475 seconds
+Real time usage: 0.708 seconds
+Preprocessor visited node count: 1521/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
 Highest expansion depth: 7/100
@@ -758,19 +756,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   48.573      1 -total
- 20.38%    9.897      1 Template:Sketcher_Tools_navi/cs
- 16.13%    7.835      1 Template:Userdocnavi/cs
- 11.04%    5.362      2 Template:Navigation_menu_2
-  8.86%    4.304      2 Template:Docnav
-  8.25%    4.008      1 Template:PropertyView
-  7.30%    3.546      6 Template:Caption
-  6.90%    3.352      5 Template:MenuCommand
-  6.20%    3.013     34 Template:Version
-  5.59%    2.716      8 Template:VersionPlus
+100.00%   59.334      1 -total
+ 30.04%   17.822      1 Template:Sketcher_Tools_navi/cs
+ 13.77%    8.170      2 Template:Navigation_menu_2
+ 11.71%    6.946      1 Template:Userdocnavi/cs
+ 11.52%    6.836      1 Template:PropertyView
+  7.13%    4.228      1 Template:Variable
+  6.21%    3.684      2 Template:Docnav
+  5.53%    3.278     14 Template:KEY
+  5.29%    3.137      8 Template:VersionPlus
+  5.22%    3.099     34 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118114343 and revision id 1740337. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118114500 and revision id 1740339. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
