--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -136,9 +136,7 @@
 <ul><li><span id="Sketcher_CompCreateRectangles"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Sketcher_CreateRectangle.svg&amp;filetimestamp=20240101090846&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateRectangle.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow_blue_background.svg&amp;filetimestamp=20221006081506&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow_blue_background.svg" decoding="async" width="16" height="32" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span> Vytvo&#345;it obd&eacute;ln&iacute;k:</span></li></ul>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateRectangle.svg&amp;filetimestamp=20240101090846&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateRectangle.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateRectangle.html" title="Sketcher CreateRectangle">Obd&eacute;ln&iacute;k</a>: Vytvo&#345;&iacute; obd&eacute;ln&iacute;k. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>: N&aacute;stroj m&aacute; &#269;ty&#345;i re&#382;imy. Zaoblen&eacute; rohy a vytvo&#345;en&iacute; odsazen&eacute; kopie jsou voliteln&eacute; funkce.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateRectangle_Center.svg&amp;filetimestamp=20240101090859&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateRectangle_Center.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateRectangle_Center.html" title="Sketcher CreateRectangle Center">Vycentrovan&yacute; obd&eacute;ln&iacute;k</a>: Vytvo&#345;&iacute; vycentrovan&yacute; obd&eacute;ln&iacute;k. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>: Jedn&aacute; se o stejn&yacute; n&aacute;stroj jako <a href="../Sketcher_CreateRectangle.html" title="Sketcher CreateRectangle">Obd&eacute;ln&iacute;k</a>, ale s odli&scaron;n&yacute;m po&#269;&aacute;te&#269;n&iacute;m re&#382;imem.</li></ul></dd></dl>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateOblong.svg&amp;filetimestamp=20240101090600&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateOblong.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateOblong.html" title="Sketcher CreateOblong">Rounded Rectangle</a>: Creates a rounded rectangle. Idem.</li></ul></dd></dl>
-</div>
+<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateOblong.svg&amp;filetimestamp=20240101090600&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateOblong.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateOblong.html" title="Sketcher CreateOblong">Zaoblen&yacute; obd&eacute;ln&iacute;k</a>: Vytvo&#345;&iacute; zaoblen&yacute; obd&eacute;ln&iacute;k. Idem.</li></ul></dd></dl>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span id="Sketcher_CompCreateRegularPolygon"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Sketcher_CreateHexagon.svg&amp;filetimestamp=20240101090346&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateHexagon.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow_blue_background.svg&amp;filetimestamp=20221006081506&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow_blue_background.svg" decoding="async" width="16" height="32" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span> Create Polygon:</span></li></ul>
 </div>
@@ -740,13 +738,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118114501
+Cached time: 20260118114548
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.475 seconds
-Real time usage: 0.708 seconds
-Preprocessor visited node count: 1521/1000000
+CPU time usage: 0.412 seconds
+Real time usage: 0.542 seconds
+Preprocessor visited node count: 1520/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
 Highest expansion depth: 7/100
@@ -756,19 +754,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   59.334      1 -total
- 30.04%   17.822      1 Template:Sketcher_Tools_navi/cs
- 13.77%    8.170      2 Template:Navigation_menu_2
- 11.71%    6.946      1 Template:Userdocnavi/cs
- 11.52%    6.836      1 Template:PropertyView
-  7.13%    4.228      1 Template:Variable
-  6.21%    3.684      2 Template:Docnav
-  5.53%    3.278     14 Template:KEY
-  5.29%    3.137      8 Template:VersionPlus
-  5.22%    3.099     34 Template:Version
+100.00%   37.385      1 -total
+ 19.86%    7.423      1 Template:Sketcher_Tools_navi/cs
+ 11.83%    4.423      2 Template:Navigation_menu_2
+ 10.79%    4.034      1 Template:Userdocnavi/cs
+  8.93%    3.339      1 Template:PropertyView
+  8.48%    3.170     34 Template:Version
+  7.30%    2.731      6 Template:Caption
+  6.90%    2.579      2 Template:Docnav
+  5.33%    1.991      8 Template:VersionPlus
+  4.73%    1.767     14 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118114500 and revision id 1740339. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118114547 and revision id 1740341. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
