--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -137,9 +137,7 @@
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateRectangle.svg&amp;filetimestamp=20240101090846&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateRectangle.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateRectangle.html" title="Sketcher CreateRectangle">Obd&eacute;ln&iacute;k</a>: Vytvo&#345;&iacute; obd&eacute;ln&iacute;k. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>: N&aacute;stroj m&aacute; &#269;ty&#345;i re&#382;imy. Zaoblen&eacute; rohy a vytvo&#345;en&iacute; odsazen&eacute; kopie jsou voliteln&eacute; funkce.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateRectangle_Center.svg&amp;filetimestamp=20240101090859&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateRectangle_Center.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateRectangle_Center.html" title="Sketcher CreateRectangle Center">Vycentrovan&yacute; obd&eacute;ln&iacute;k</a>: Vytvo&#345;&iacute; vycentrovan&yacute; obd&eacute;ln&iacute;k. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>: Jedn&aacute; se o stejn&yacute; n&aacute;stroj jako <a href="../Sketcher_CreateRectangle.html" title="Sketcher CreateRectangle">Obd&eacute;ln&iacute;k</a>, ale s odli&scaron;n&yacute;m po&#269;&aacute;te&#269;n&iacute;m re&#382;imem.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateOblong.svg&amp;filetimestamp=20240101090600&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateOblong.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateOblong.html" title="Sketcher CreateOblong">Zaoblen&yacute; obd&eacute;ln&iacute;k</a>: Vytvo&#345;&iacute; zaoblen&yacute; obd&eacute;ln&iacute;k. Idem.</li></ul></dd></dl>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span id="Sketcher_CompCreateRegularPolygon"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Sketcher_CreateHexagon.svg&amp;filetimestamp=20240101090346&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateHexagon.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow_blue_background.svg&amp;filetimestamp=20221006081506&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow_blue_background.svg" decoding="async" width="16" height="32" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span> Create Polygon:</span></li></ul>
-</div>
+<ul><li><span id="Sketcher_CompCreateRegularPolygon"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Sketcher_CreateHexagon.svg&amp;filetimestamp=20240101090346&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateHexagon.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow_blue_background.svg&amp;filetimestamp=20221006081506&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow_blue_background.svg" decoding="async" width="16" height="32" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span> Vytvo&#345;it mnoho&uacute;heln&iacute;k:</span></li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateTriangle.svg&amp;filetimestamp=20240101091254&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateTriangle.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateTriangle.html" title="Sketcher CreateTriangle">Triangle</a>: creates an equilateral triangle. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>: This is the same tool as <a href="../Sketcher_CreateRegularPolygon.html" title="Sketcher CreateRegularPolygon">Polygon</a> but with the number of sides preset to a specif value.</li></ul></dd></dl>
 </div>
@@ -738,13 +736,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118114548
+Cached time: 20260118114621
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.412 seconds
-Real time usage: 0.542 seconds
-Preprocessor visited node count: 1520/1000000
+CPU time usage: 0.449 seconds
+Real time usage: 0.734 seconds
+Preprocessor visited node count: 1519/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
 Highest expansion depth: 7/100
@@ -754,19 +752,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   37.385      1 -total
- 19.86%    7.423      1 Template:Sketcher_Tools_navi/cs
- 11.83%    4.423      2 Template:Navigation_menu_2
- 10.79%    4.034      1 Template:Userdocnavi/cs
-  8.93%    3.339      1 Template:PropertyView
-  8.48%    3.170     34 Template:Version
-  7.30%    2.731      6 Template:Caption
-  6.90%    2.579      2 Template:Docnav
-  5.33%    1.991      8 Template:VersionPlus
-  4.73%    1.767     14 Template:KEY
+100.00%   38.309      1 -total
+ 30.08%   11.525      1 Template:Sketcher_Tools_navi/cs
+ 21.90%    8.389      2 Template:Navigation_menu_2
+ 16.32%    6.253      1 Template:PropertyView
+ 10.34%    3.963      1 Template:Userdocnavi/cs
+  7.00%    2.680      1 Template:Variable
+  6.90%    2.643     34 Template:Version
+  5.79%    2.220      2 Template:Docnav
+  4.46%    1.707     14 Template:KEY
+  3.97%    1.521      6 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118114547 and revision id 1740341. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118114620 and revision id 1740343. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
